# fast-api-lms

./: main.py
api/: courses.py  sections.py  users.py
myproject/: pyproject.toml
